<resources>
    <string name="app_name">Library</string>
    <string name="press_again_to_leave">Press back button again to leave Library</string>
    <string name="unexpected_error_occurs">Unexpected error occurred</string>
    <string name="not_connected_book_info">Not connected to internet. Cannot get info about book</string>
    <string name="sign_in_connection_error">Cannot Sign-in. Please check your internet connection</string>
    <string name="communication_error">Communication error. Cannot get info about book</string>
    <string name="incorrect_date_format">Incorrect date format. Please use calendar button</string>
    <string name="empty_name">Name should not be empty</string>
    <string name="incorrect_borrow_date">Borrow date should not be set to past date</string>
    <string name="format_book_title_subtitle">%1$s: %2$s</string>
    <string name="format_book_published_year">%d</string>
    <string name="title_add_new_book">New Book</string>
    <string name="title_edit_book">Edit Book</string>
    <string name="dialog_image_optimization_title">Optimizing the application</string>
    <string name="dialog_image_optimization_message">Optimizing the size of images used in the application</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_borrow">Borrow</string>
    <string name="action_search">Search</string>
    <string name="action_search_isbn">ISBN search</string>
    <string name="action_move_to_library">Move to Library</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_continue">Continue</string>
    <string name="action_select_file">Select file</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="action_add_import">Import from table</string>
    <string name="action_add_bulk">Bulk insert books</string>
    <string name="action_add_scan">Scan book barcode</string>
    <string name="action_add_single">Add single book</string>
    <string name="action_change">Change</string>
    <string name="action_change_author">Change author</string>
    <string name="action_change_publisher">Change publisher</string>
    <string name="action_change_library">Change library</string>
    <string name="author_unknown">Author unknown</string>
    <string name="publisher_unknown">Publisher unknown</string>
    <string name="library_unknown">Library unknown</string>
    <string name="book_list_item">Book</string>
    <string name="author_list_item">Author</string>
    <string name="parallax_cover">Image</string>
    <string name="book_list_empty">The book list is currently empty.\nTo add new book, tap the + button located right, at the bottom of the screen or check the menu using the icon located left, at the upper part of the screen, for other options.</string>
    <string name="book_borrowed_list_empty">The list of borrowed books is currently empty. \nTo borrow a book, choose a particular book from your list and tap button for borrowing</string>
    <string name="author_list_empty">The list of authors is currently empty. \nAuthors will appear with the addition of the first book.</string>
    <string name="publisher_list_empty">The list of publishers is currently empty. \nPublishers will appear with the addition of the first book.</string>
    <string name="library_list_empty">the library list is currently empty. Libraries will appear with the addition of the first book.</string>
    <string name="book_list_delete_title">Delete books</string>
    <plurals name="book_list_delete_message">
        <item quantity="one">Are you sure you want to delete %d book?</item>
        <item quantity="other">Are you sure you want to delete %d books?</item>
    </plurals>
    <string name="edit_book_author">Author</string>
    <string name="edit_book_publisher">Publisher</string>
    <string name="edit_book_genre">Genre</string>
    <string name="edit_book_library">Library (Home, College…)</string>
    <string name="edit_book_title">Book Title</string>
    <string name="edit_book_subtitle">Additional Title</string>
    <string name="edit_book_isbn">ISBN</string>
    <string name="edit_book_scan">Scan</string>
    <string name="edit_book_description">Description</string>
    <string name="edit_book_published">Publish year</string>
    <string name="edit_book_info">Basic book information</string>
    <string name="edit_book_cover">Cover</string>
    <string name="edit_book_take_photo_permission">We need your permission to use your camera device to take and store pictures into your phone</string>
    <string name="edit_book_barcode_permission">We need your permission to scan barcodes</string>
    <string name="edit_book_gallery_permission">We need your permission to pick images from gallery</string>
    <string name="edit_book_no_permission">We cannot continue without these permissions. If you wish to change the restrictions, access the phone settings to do so</string>
    <string name="edit_book_no_permission_title">Permissions are missing</string>
    <string name="edit_book_no_camera">Your device doesn\'t have any camera. Camera is required for scanning</string>
    <string name="pick_image_select">Select image</string>
    <string name="pick_image_photo">Take photo</string>
    <string name="pick_image_gallery">Gallery</string>
    <string name="parsing_book_details">Getting details</string>
    <string name="parsing_book_details_message">Getting details about this book from internet</string>
    <string name="edit_book_already_exists">Book already exists</string>
    <string name="edit_book_already_exists_message">Book with same ISBN already exists in your database. Are you sure you want to save this book as new one?</string>
    <string name="book_detail_full_title">Book Title:</string>
    <string name="book_detail_authors">Authors:</string>
    <string name="book_detail_publisher">Publisher:</string>
    <string name="book_detail_genre">Genre:</string>
    <string name="book_detail_library">Library:</string>
    <string name="book_detail_isbn">ISBN/barcode:</string>
    <string name="book_detail_published">Publish Year:</string>
    <string name="book_detail_reading_progress">Reading progress</string>
    <string name="book_detail_my_rating">My rating</string>
    <string name="book_detail_my_favorite_quote">My favorite quote</string>
    <string name="book_detail_personal_notes">Personal notes</string>
    <string name="book_detail_tab_basic">Basic</string>
    <string name="book_detail_tab_others">Others</string>
    <string name="book_detail_share">Share book detail</string>
    <string name="book_share_by_publisher">Published by: %s</string>
    <string name="book_share_isbn">ISBN: %s</string>
    <plurals name="book_authors">
        <item quantity="one">Author: %s</item>
        <item quantity="other">Authors: %s</item>
    </plurals>
    <string name="borrow_to">Borrow book to</string>
    <string name="borrow_until">Book return date</string>
    <string name="borrow_wrong_input">Please, insert the time of expected notification</string>
    <string name="borrow_title">Borrow book</string>
    <string name="borrow_message">Who do you want do borrow the book and for how long?</string>
    <string name="navigation_header_welcome">Welcome to Library</string>
    <string name="navigation_header_sign_in">Please Sign-in here</string>
    <string name="menu_books">Books</string>
    <string name="menu_books_mine">My books</string>
    <string name="menu_books_borrowed">Books I borrowed</string>
    <string name="menu_authors">Authors</string>
    <string name="menu_publishers">Publishers</string>
    <string name="menu_libraries">Libraries</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_books_wish_list">Wishlist</string>
    <string name="menu_drive">Cloud</string>
    <string name="navigation_head">Main navigation</string>
    <string name="navigation_buy">BUY</string>
    <string name="dialog_book_delete_title">Delete book</string>
    <string name="dialog_book_delete_message">Are you sure you want to delete this book?</string>
    <string name="dialog_author_delete_title">Delete author</string>
    <string name="preferences_libraries_category">Libraries</string>
    <string name="preferences_libraries_enabled_title">Allow multiple libraries</string>
    <string name="preferences_libraries_enabled_description">Marking this will allow you to add a book to individual libraries</string>
    <string name="preferences_libraries_default_name_title">Default library</string>
    <string name="preferences_libraries_default_name_description">Default library title to which new books will be automatically added</string>
    <string name="import_activity_name">Import books</string>
    <string name="import_title_assign_columns">Assign columns</string>
    <string name="import_title_select_file">File selection</string>
    <string name="import_welcome_content">Welcome in Import book Wizard.
        If you have any table created (for example Excel or Libre Office table) with book data,
        then the Wizard is made for you. You will select table file, add some more information
        and we will import books for you.</string>
    <string name="import_select_file_content">In this step, we need you to select the file
        from which we should copy data about your books. The file must be in CSV format.
        If you do not know how to create such a file, see Help.</string>
    <string name="import_select_file_description">Such files can be normally created by selecting
        File > Save As > .csv file type.
        Advanced settings can be default</string>
    <string name="import_select_file_excel">CSV file in Excel</string>
    <string name="import_select_file_libre">CSV file in Libre / Open Office</string>
    <string name="import_assign_columns_content">Now we need to assign the columns of your table
        to the table that is hidden in the application. So we do not mistake name of the author
        with book title.</string>
    <string name="import_assign_columns_extra">We will show you all the values from the first row
        of your table. Please select column for each value to be properly assigned.</string>
    <string name="import_assign_columns_first">Save first (shown) row as well</string>
    <string name="menu_books_borrowed_to_me">Borrowed from friends</string>
    <string name="preferences_visual_category">Application appearance</string>
    <string name="preferences_visual_conservative_title">Conservative colors</string>
    <string name="preferences_visual_conservative_description">Enable this setting to display simple colors in lists of books, authors, publishers and libraries</string>
    <string name="preferences_visual_sk_cz_title">Search SK/CZ database</string>
    <string name="preferences_visual_sk_cz_description">Enable this setting to search in Slovak and Czech books after barcode scan (Google Books search is enabled always)</string>
    <string name="preferences_visual_privacy_title">Privacy Policy</string>
    <string name="news_title">News</string>
    <string name="news_text">Library is one of the most downloaded apps in Slovakia related to books. But there are many users, that uninstalls the Library right away. Because of that I\'m thinking about cancelling it.\n\nSo I need your support. If you have any feedback or suggestion, now you are able to send it to me anonymously.\n\nAll reasonable suggestions, will be moved to a voting.</string>
    <string name="author_field">Author (optional)</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
</resources>