<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferences_libraries_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="library_enabled"
            android:summary="@string/preferences_libraries_enabled_description"
            android:title="@string/preferences_libraries_enabled_title" />

        <EditTextPreference
            android:key="default_library"
            android:summary="@string/preferences_libraries_default_name_description"
            android:title="@string/preferences_libraries_default_name_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_visual_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="conservative_enabled"
            android:summary="@string/preferences_visual_conservative_description"
            android:title="@string/preferences_visual_conservative_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="search_sk_cz"
            android:summary="@string/preferences_visual_sk_cz_description"
            android:title="@string/preferences_visual_sk_cz_title" />

        <Preference
            android:key="privacy_policy"
            android:title="@string/preferences_visual_privacy_title" />
    </PreferenceCategory>


</PreferenceScreen>