<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/books"
            android:title="@string/menu_books">
            <menu>
                <item
                    android:id="@+id/main_navigation_books"
                    android:checked="true"
                    android:icon="@drawable/ic_book"
                    android:title="@string/menu_books_mine"
                    app:actionLayout="@layout/navigation_action_layout_text"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/main_navigation_borrowed"
                    android:icon="@drawable/ic_share"
                    android:title="@string/menu_books_borrowed"
                    app:actionLayout="@layout/navigation_action_layout_text"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/main_navigation_borrowed_to_me"
                    android:icon="@drawable/ic_borrowed_to_me"
                    android:title="@string/menu_books_borrowed_to_me"
                    app:actionLayout="@layout/navigation_action_layout_text"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/main_navigation_wish_list"
                    android:icon="@drawable/ic_heart_outline"
                    android:title="@string/menu_books_wish_list"
                    app:actionLayout="@layout/navigation_action_layout_text"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

        <item
            android:id="@+id/authors"
            android:title="@string/menu_authors">
            <menu>
                <item
                    android:id="@+id/main_navigation_authors"
                    android:icon="@drawable/ic_author"
                    android:title="@string/menu_authors" />

                <item
                    android:id="@+id/main_navigation_publishers"
                    android:icon="@drawable/ic_tie"
                    android:title="@string/menu_publishers" />

                <item
                    android:id="@+id/main_navigation_libraries"
                    android:icon="@drawable/ic_library"
                    android:title="@string/menu_libraries" />
            </menu>
        </item>

        <item
            android:id="@+id/settings"
            android:title="@string/menu_settings">
            <menu>
                <item
                    android:id="@+id/main_navigation_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_settings" />
                <item
                    android:id="@+id/main_navigation_drive"
                    android:icon="@drawable/ic_cloud"
                    android:title="@string/menu_drive"
                    android:visible="false"
                    app:actionLayout="@layout/navigation_action_layout_buy" />
            </menu>
        </item>
    </group>
</menu>