<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_pencil_white"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_borrow"
        android:icon="@drawable/ic_share_white"
        android:title="@string/action_borrow"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_add"
        android:title="@string/action_move_to_library"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>