<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Large.Inverse"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:background="@color/primary_variant"
                android:gravity="bottom"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/import_title_select_file" />

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/import_select_file_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/import_select_file_description" />
            <!-- https://support.office.com/en-us/article/Import-or-export-text-txt-or-csv-files-5250ac4c-663c-47ce-937b-339e391393ba#bmexport -->
            <Button
                android:id="@+id/import_excel"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Theme.Variant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/import_select_file_excel" />

            <!-- https://help.libreoffice.org/Calc/Importing_and_Exporting_CSV_Files#To_Save_a_Sheet_as_a_Text_CSV_File -->
            <Button
                android:id="@+id/import_open_office"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Theme.Variant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/import_select_file_libre" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/import_continue"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:text="@string/action_select_file" />
</LinearLayout>